--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMazw380kgXuuR17ef8Z9IB",
+      "authorship_tag": "ABX9TyNbE6a0NzMIwVdDLIxV8b1M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "id": "ks9xaQZiHPgo"
       },
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "03KoBLNlHjtQ"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "KLVlTJk9HxUj"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
         "id": "QNw6VOSxIL7f",
         "outputId": "3b282c17-2586-48fb-f458-55d850bca70b"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -742,7 +742,7 @@
         "id": "YTRLv8C_INgF",
         "outputId": "31e539ce-6181-4d79-a1d2-99591c968adb"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1458,7 +1458,7 @@
         "id": "XjluXuakIQUi",
         "outputId": "508597a2-d0ba-4848-d029-83059d32e9c7"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1484,7 +1484,7 @@
       "metadata": {
         "id": "RMJ1F-8oIVgd"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1499,7 +1499,7 @@
         "id": "V9C7UoOaIcw8",
         "outputId": "afe5bbff-1659-4c90-f98a-8b74fb2be4de"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1529,7 +1529,7 @@
         "id": "77t-ZGDDJ0r-",
         "outputId": "7e35d241-e7ff-41ee-9110-c1f43ccd7236"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1576,7 +1576,7 @@
       "metadata": {
         "id": "x8X8zZ8bK9-H"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1591,7 +1591,7 @@
         "id": "RzlRRud3LLEq",
         "outputId": "3e767727-a3a2-415d-9d04-c90f73fca8be"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1633,7 +1633,7 @@
         "id": "XcClpI6RMDsV",
         "outputId": "693d34ee-6e35-4be9-abf2-fae075d671d1"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1988,7 +1988,7 @@
         "id": "qD-j1c7cNdAC",
         "outputId": "44421068-f86b-4bdd-b5e4-a37ec5c1c4e9"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2485,7 +2485,7 @@
         "id": "fJF6SXlENn11",
         "outputId": "edf06674-b665-48e2-d177-d45f86431641"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2526,7 +2526,7 @@
         "id": "-iUt-nfsNshC",
         "outputId": "cc6c5bbe-404d-434f-9883-1d6e3f712cda"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2565,7 +2565,7 @@
         "id": "GVpkJteePqc-",
         "outputId": "8171f784-42b4-49c7-c224-4061e16f906f"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2942,7 +2942,7 @@
       "metadata": {
         "id": "DgnmuJ5nQJdN"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2958,7 +2958,7 @@
         "id": "fqwymE8GQogg",
         "outputId": "f01e724e-f51e-4275-9ece-cc643617cc7d"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3396,7 +3396,7 @@
         "id": "kBxQnD7JQrXG",
         "outputId": "80527714-984e-4234-e0d4-e0207dbda8f0"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3792,7 +3792,7 @@
         "id": "LNceJSqvQvhJ",
         "outputId": "8f342876-4824-46c0-fbb1-b8955bd49633"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3826,7 +3826,7 @@
         "id": "UQfzjD2DRdIn",
         "outputId": "3be8891e-a07f-4395-9b4e-5be9d79c82b9"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3846,8 +3846,17 @@
       "metadata": {
         "id": "nR23b2eiT9V6"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Using same data but instead of dropping missing values, fill the missing values with mean and mode"
+      ],
+      "metadata": {
+        "id": "NZSqMNxJc1yW"
+      }
     },
     {
       "cell_type": "code",
@@ -3858,7 +3867,7 @@
       "metadata": {
         "id": "Cp6AmC_pTcXZ"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3874,7 +3883,7 @@
         "id": "IN1zAIkOTsVP",
         "outputId": "a2f0b607-0f80-4f77-ef81-160149ae212e"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4255,7 +4264,7 @@
         "id": "UqsdCK1oT29J",
         "outputId": "1330c14d-2729-4447-f73d-b6914a1e72b0"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4302,7 +4311,7 @@
       "metadata": {
         "id": "EsatB3rWT42E"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4318,7 +4327,7 @@
         "id": "U4WOi5BVVNNq",
         "outputId": "b3ee2b74-efb8-4904-95a3-16b1378a6cb9"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4423,7 +4432,7 @@
       "metadata": {
         "id": "F5jZO_6nVR4j"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4439,7 +4448,7 @@
         "id": "cpaR3AZiVorI",
         "outputId": "1390b954-ac44-49ee-b250-5e361301fde6"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4548,7 +4557,7 @@
         "id": "Kxgn-QEYVsEC",
         "outputId": "e3e438fb-607f-468a-c5b8-17d90ed066f1"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4590,7 +4599,7 @@
         "id": "-zZQvRQ2VuJv",
         "outputId": "7e14f145-dde7-491d-dd40-2f2bdb2cee9c"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4945,7 +4954,7 @@
         "id": "FOeL6zATVx2v",
         "outputId": "9f849c22-8796-42cb-b33a-dd698b2b4161"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5322,7 +5331,7 @@
       "metadata": {
         "id": "C5gfwahVaI-j"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5338,7 +5347,7 @@
         "id": "LpgrA_GfaZID",
         "outputId": "38c3e105-314f-495a-e621-015873dfe9d2"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5776,7 +5785,7 @@
         "id": "I7sebMsqabeL",
         "outputId": "85570011-1afe-4774-a098-b198ec703021"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6172,7 +6181,7 @@
         "id": "La1rN73fa4aI",
         "outputId": "dc11ea6f-eedc-437e-8e44-a322106414f0"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6206,7 +6215,7 @@
         "id": "iru2Ccq6bc7x",
         "outputId": "b669a9a8-1673-45c2-aa02-e5bf61db1328"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
